--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,32 +1,38 @@
 @import (css) url("//hello.myfonts.net/count/38c2a3?css");
 
-@font-face {font-family: 'AvenirNextLTPro-Light';src: url('../../../assets/fonts/38C2A3_0_0.eot');src: url('../../../assets/fonts/38C2A3_0_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38C2A3_0_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_0_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_0_0.ttf') format('truetype');}
-@font-face {font-family: 'AvenirNextLTPro-Medium';src: url('../../../assets/fonts/38C2A3_1_0.eot');src: url('../../../assets/fonts/38C2A3_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38C2A3_1_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_1_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_1_0.ttf') format('truetype');}
-@font-face {font-family: 'AvenirNextLTPro-Regular';src: url('../../../assets/fonts/38C2A3_2_0.eot');src: url('../../../assets/fonts/38C2A3_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38C2A3_2_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_2_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_2_0.ttf') format('truetype');}
-
-
+@font-face {
+  font-family: 'AvenirNextLTPro-Light';
+  src: url("../../../assets/fonts/38C2A3_0_0.eot");
+  src: url("../../../assets/fonts/38C2A3_0_0.eot?#iefix") format('embedded-opentype'),url('../../../assets/fonts/38C2A3_0_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_0_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_0_0.ttf') format('truetype');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'AvenirNextLTPro-Medium';
+  src: url("../../../assets/fonts/38C2A3_1_0.eot");
+  src: url("../../../assets/fonts/38C2A3_1_0.eot?#iefix") format('embedded-opentype'),url('../../../assets/fonts/38C2A3_1_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_1_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_1_0.ttf') format('truetype');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'AvenirNextLTPro-Regular';
+  src: url("../../../assets/fonts/38C2A3_2_0.eot");
+  src: url("../../../assets/fonts/38C2A3_2_0.eot?#iefix") format('embedded-opentype'),url('../../../assets/fonts/38C2A3_2_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_2_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_2_0.ttf') format('truetype');
+  font-display: swap;
+}
 /* latin */
 @font-face {
   font-family: 'ProductSans-Regular';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Product Sans'), local('ProductSans-Regular'), url("../../../assets/fonts/ProductSans-Regular.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'ProductSans-MediumItalic';
-  font-style: italic;
-  font-weight: 500;
-  src: local('Product-Sans Medium Italic'), local('ProductSans-MediumItalic'), url("../../../assets/fonts/ProductSans-MediumItalic.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* latin */
-@font-face {
   font-family: 'ProductSans-Medium';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -35,20 +41,21 @@
   font-family: 'ProductSans-Bold';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("../../../assets/fonts/ProductSans-Bold.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
 @font-face {
   font-family: 'Hack';
-  src: url('../../../assets/fonts/hack-regular.woff2?sha=3114f1256') format('woff2'), url('../../../assets/fonts/hack-regular.woff?sha=3114f1256') format('woff');
+  src: url("../../../assets/fonts/hack-regular.woff2?sha=3114f1256") format('woff2'), url("../../../assets/fonts/hack-regular.woff?sha=3114f1256") format('woff');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
-
 @font-face {
   font-family: 'Hack';
-  src: url('../../../assets/fonts/hack-bold.woff2?sha=3114f1256') format('woff2'), url('../../../assets/fonts/hack-bold.woff?sha=3114f1256') format('woff');
+  src: url("../../../assets/fonts/hack-bold.woff2?sha=3114f1256") format('woff2'), url("../../../assets/fonts/hack-bold.woff?sha=3114f1256") format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
