--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -20,6 +20,7 @@
 		background: #a1afc5;
 		color: white;
 		border: none;
+		border-radius: 2px;
 
 		&:hover {
 			background: @hover-color;
@@ -36,6 +37,7 @@
 		background: #a1afc5;
 		color: white;
 		border: none;
+		border-radius: 2px;
 
 		&:hover {
 			background: @hover-color;
