--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -370,6 +370,10 @@
 				}
 			}
 
+			a:hover {
+				color: @hover-color;
+			}
+
 			span {
 				@media(max-width: 600px) {
 					font-family: 'AvenirNextLTPro-Medium', sans-serif;
