--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -168,9 +168,13 @@
 				i {
 					margin: auto;
 					color: #a3a7b2;
-					font-size: 27px;
+					font-size: 19px;
 					display: block;
 					width: fit-content;
+
+					@media(max-width: 800px) {
+						font-size: 27px;
+					}
 				}
 			}
 
