--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -9,6 +9,8 @@
 	margin-bottom: 30px;
 	width: -webkit-fill-available;
 	width: -moz-fill-available;
+	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+
 	@media(max-width: 600px) {
 		margin-left: calc(~"-50vw + 50%") !important;
 		margin-right: calc(~"-50vw + 50%") !important;
@@ -64,6 +66,7 @@
 		span {
 			margin: 0 7px;
 			font-size: 0.9em;
+			line-height: 1.8;
 
 			i {
 				margin-right: 7px;
