--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -14,9 +14,18 @@
         position: relative;
         margin: 15px;
         padding: 0;
-        height: -moz-fill-available;
-        height: -webkit-fill-available;
+        height: auto;
         display: block;
+
+        @media(max-width: 600px) {
+          height: auto;
+        }
+      }
+
+      .post-content {
+        @media(max-width: 600px) {
+          display: none;
+        }
       }
     }
 
@@ -54,16 +63,21 @@
 
     article {
       width: 49%;
-      height: 450px;
+      height: auto;
       position: relative;
       display: flex;
       flex-direction: column;
       @media(max-width: 600px) {
         width: 100%;
+        height: auto;
       }
 
       .post-head {
         margin: 0;
+
+        @media(max-width: 600px) {
+              margin: 0 0 80px;
+        }
       }
 
       .post-title {
@@ -77,7 +91,7 @@
 
       .featured-media {
         display: block;
-        margin: auto;
+        margin: 0 auto;
         background-size: cover;
         height: 200px;
         width: 100%;
@@ -95,7 +109,12 @@
         font-weight: 600;
 
         @media(max-width: 600px){
-          font-size: .95em !important;
+          font-size: 0.95em !important;
+          min-height: unset;
+          height: fit-content;
+          max-height: fit-content;
+          position: relative;
+          margin-bottom: 20px;
         }
       }
 
@@ -171,6 +190,7 @@
       @media(max-width: 900px) {
         margin: 25px 50px 0;
       }
+
     }
 
     .page-title {
