--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -7,12 +7,14 @@
 		<!-- start post -->
 		{{#post}}
 			<div class="main-content">
+				<div class="intro">
 				{{#if feature_image}}
 					<div class="featured-media" style="background-image: url({{feature_image}});">
 					</div>
 				{{/if}}
 				<h1>{{{title}}}</h1>
 				<p>{{content}}</p>
+			</div>
 				<h3>Our Github Repos</h3>
 				<div class="github-cards">
 					<a href="https://github.com/toddbirchard/ghosttheme-stockholm" class="github-card" data-github="toddbirchard/ghosttheme-stockholm">
