--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -14,7 +14,6 @@
     width: 100%;
     box-shadow: 0 0 5px rgba(65,67,144,.15);
     background: white;
-    padding: 3px 30px 20px;
     width: auto;
   }
 
@@ -113,19 +112,14 @@
   }
 
   p {
-    margin: 20px 0 30px;
+    margin: 20px 0;
   }
 
   .intro {
-    padding: 30px;
-    width: auto;
-    background: white;
-    margin: auto;
 
     h1 {
       margin: 10px 0 30px;
-      color: @h1-color;
-      font-weight: 500;
+
       @media(max-width: 800px) {
         margin: 30px 0 0;
       }
@@ -144,8 +138,9 @@
     height: 800px;
 
     @media(max-width: 800px){
-      margin: 30px 0;
+      margin: 30px 0 50px;
       height: 850px;
+      overflow: visible;
       &:hover{
         cursor: grab;
       }
@@ -159,7 +154,7 @@
       margin: 10px 100px;
       position: absolute;
       width: -webkit-fill-available;
-      bottom: 0px;
+      bottom: -50px;
 
       @media(max-width: 800px) {
         display: flex;
