wrapping up misc fixes

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -28,6 +28,7 @@
     font-weight: 600;
     color: #326671;
     margin-bottom: 10px !important;
+    margin-top: 2px;
   }
 
   .meta-info {
@@ -40,7 +41,7 @@
 
   span {
     color: #56585f;
-    font-size: 1.2em;
+    font-size: 1em;
   }
 
   .author-specs {
