--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -206,7 +206,7 @@
           font-weight: 100;
           line-height: 1.21;
           text-align: left;
-          display: block;
+          display: none;
           white-space: pre-wrap;
           @media(max-width: 600px) {
             display: none;
