--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -371,7 +371,9 @@
 			}
 
 			a:hover {
-				color: @hover-color;
+				* {
+					color: @hover-color;
+				}
 			}
 
 			span {
@@ -475,11 +477,17 @@
 
 			ul {
 				margin-left: 0;
+				margin-bottom: 0;
 
 				li {
-					border-left: 1px solid rgba(77, 177, 212, .3);
-					padding-left: 20px;
+					border-left: 1px solid rgba(77, 177, 212, 0.3);
+					padding: 0 20px 20px;
 					margin-left: 10px;
+					margin: 0 0 0 10px;
+
+					&:last-of-type {
+						padding-bottom: 0;
+					}
 				}
 			}
 		}
@@ -503,7 +511,7 @@
 	/*   Start of Protip box */
 	.protip {
 		background: rgba(255, 222, 196, 0.42);
-	  padding: 50px 20px 20px;
+	  padding: 53px 20px 16px;
 		margin-bottom: 20px;
 		font-size: 0.96em;
 		line-height: 2;
@@ -513,6 +521,7 @@
 		max-width: 95%;
 		line-height: 1.7;
 		position: relative;
+		color: #4c3100;
 		@media(max-width: 600px) {
 			padding: 0 30px 20px;
 			line-height: 1.6;
@@ -541,6 +550,7 @@
 			padding: 8px 20px;
 			font-weight: 700;
 			top: 0;
+			left: 0;
 		}
 
 		li::before {
@@ -718,5 +728,11 @@
 		right: 0 !important;
 		margin: auto;
 		position: fixed;
+	}
+
+	.handscroller {
+		&:hover {
+			cursor: grab !important;
+		}
 	}
 }
