--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -1,284 +1,286 @@
 @table-border-color: rgba(0,0,0,.12);
 @table-striped-color: rgba(242, 242, 242, 0.5);
 
-table,
-td,
-th {
-  border: none;
-  max-width: 150px;
-  overflow: hidden;
-  text-align: left !important;
-  padding: 15px 20px;
-}
-
-table {
-  min-width: 100%;
-  display: table;
-  border-collapse: collapse;
-  border-spacing: 0;
-  border: 1px solid rgba(77, 87, 109, 0.25);
-  overflow: hidden;
-  @media(max-width: 600px) {
-    width: 100%;
+.post-template {
+  table,
+  td,
+  th {
+    border: none;
+    max-width: 150px;
+    overflow: hidden;
+    text-align: left !important;
+    padding: 15px 20px;
   }
 
-  &.left {
-    tbody {
-      td {
-        text-align: left;
-        vertical-align: top;
-      }
-
-      .pre {
-        font-size: .8em;
-        width: fit-content;
-      }
-    }
-  }
-
-  thead {
-    tr {
-      border-bottom: 1px solid rgba(0,0,0,.12);
-      background-color: #5d6b8a !important;
-      color: white;
-    }
-
-    th {
-      text-align: center;
-      font-family: 'AvenirNextLTPro-Regular';
-      min-width: 30px;
-      padding: 10px;
-      font-size: 0.9em;
-
-      strong {
-        font-family: 'AvenirNextLTPro-Regular';
-      }
-
-      &::before {
-        font-family: 'AvenirNextLTPro-Regular' !important;
-      }
-    }
-  }
-
-  &.striped {
-    tr {
-      border-bottom: none;
-    }
-
-    tbody {
-      tr:nth-child(odd) {
-        background-color: @table-striped-color;
-      }
-
-      tr > td {
-        border-radius: 0;
-      }
-    }
-  }
-
-  &.highlight > tbody > tr {
-    transition: background-color 0.25s ease;
-
-    &:hover {
-      background-color: @table-striped-color;
-    }
-  }
-
-  &.centered {
-    tbody tr td,
-    thead tr th {
-      text-align: center;
-    }
-  }
-}
-
-tr:nth-child(odd) {
-  background-color: #fff;
-}
-
-tr:nth-child(even) {
-  background-color: #f5f8ff;
-}
-
-td,
-th {
-  padding: 15px;
-  display: table-cell;
-  text-align: left;
-  vertical-align: middle;
-  text-align: center;
-  font-size: 0.8em;
-  text-align: center;
-  line-height: 1.2;
-}
-// Responsive Table
-@media (max-width:600px) {
   table {
-    width: auto;
+    min-width: 100%;
+    display: table;
     border-collapse: collapse;
     border-spacing: 0;
-    display: table;
-    position: relative;
-    overflow-x: scroll;
-
-    &:hover {
-      cursor: grab;
+    border: 1px solid rgba(77, 87, 109, 0.25);
+    overflow: hidden;
+    @media(max-width: 600px) {
+      width: 100%;
     }
 
-    td:empty:before {
-      content: '\00a0';
-    }
+    &.left {
+      tbody {
+        td {
+          text-align: left;
+          vertical-align: top;
+        }
 
-    td,
-    th {
-      margin: 0;
-      vertical-align: top;
-      border-spacing: 0 !important;
-      border-collapse: collapse !important;
-      font-size: 0.8em;
-    }
-
-    td {
-      width: -webkit-fill-available;
-      width: -moz-available;
+        .pre {
+          font-size: 0.8em;
+          width: fit-content;
+        }
+      }
     }
 
     thead {
-      z-index: 1;
-      position: absolute;
-      left: 0;
-      width: 100px;
-      height: 100%;
-      border: 0;
-      border-right: 1px solid @table-border-color;
+      tr {
+        border-bottom: 1px solid rgba(0,0,0,.12);
+        background-color: #5d6b8a !important;
+        color: white;
+      }
 
       th {
-        display: block;
-        padding: 10px 5px!important;
-        font-family: 'AvenirNextLTPro-Regular';
-        letter-spacing: .5px;
         text-align: center;
-        text-align: left;
-        text-transform: capitalize;
-        font-weight: 500;
-        font-size: .8em;
+        font-family: 'AvenirNextLTPro-Regular';
+        min-width: 30px;
+        padding: 10px;
+        font-size: 0.9em;
 
-        * {
-          font-size: 1em;
+        strong {
+          font-family: 'AvenirNextLTPro-Regular';
         }
 
-        /*&::before {
-          content: "\00a0";
-        }*/
-      }
-
-      tr {
-        display: block;
-        border-spacing: 0;
-        padding: 0;
-        height: 100%;
+        &::before {
+          font-family: 'AvenirNextLTPro-Regular' !important;
+        }
       }
     }
 
-    tbody {
-      margin-left: 120px;
-      width: auto;
-      position: relative;
-      overflow-x: auto;
-      white-space: nowrap;
-      height: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: stretch;
-
-      & > tr > th {
-        border-bottom: 1px solid #e0e0e0;
-        border-radius: 0;
-        border-spacing: 0;
-        border-collapse: collapse;
-      }
-
+    &.striped {
       tr {
-        /*display: inline-block;*/
-        vertical-align: top;
-        display: flex;
-        flex-direction: column;
-        overflow-wrap: normal;
-        line-break: strict;
-        white-space: inherit;
-        padding: 0 15px;
         border-bottom: none;
       }
-      &:last-child::after {
-        content:" ";
-        display: table-row;
-        max-width: 300px;
-        min-width: 300px;
-        margin-left: -300px;
+
+      tbody {
+        tr:nth-child(odd) {
+          background-color: @table-striped-color;
+        }
+
+        tr > td {
+          border-radius: 0;
+        }
       }
     }
 
-    td {
-      display: block;
-      min-height: 1.25em;
-      margin: 0 10px!important !important;
-      padding: 10px 0 !important;
-      border-spacing: 0;
+    &.highlight > tbody > tr {
+      transition: background-color 0.25s ease;
+
+      &:hover {
+        background-color: @table-striped-color;
+      }
+    }
+
+    &.centered {
+      tbody tr td,
+      thead tr th {
+        text-align: center;
+      }
+    }
+  }
+
+  tr:nth-child(odd) {
+    background-color: #fff;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f5f8ff;
+  }
+
+  td,
+  th {
+    padding: 15px;
+    display: table-cell;
+    text-align: left;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 0.8em;
+    text-align: center;
+    line-height: 1.2;
+  }
+  // Responsive Table
+  @media (max-width:600px) {
+    table {
+      width: auto;
       border-collapse: collapse;
-      overflow-wrap: normal;
-      line-break: normal;
-      white-space: normal;
-      width: -webkit-fill-available;
-      width: -moz-available;
-      max-width: 200px;
+      border-spacing: 0;
+      display: table;
+      position: relative;
+      overflow-x: scroll;
+
+      &:hover {
+        cursor: grab;
+      }
+
+      td:empty:before {
+        content: '\00a0';
+      }
+
+      td,
+      th {
+        margin: 0;
+        vertical-align: top;
+        border-spacing: 0 !important;
+        border-collapse: collapse !important;
+        font-size: 0.8em;
+      }
+
+      td {
+        width: -webkit-fill-available;
+        width: -moz-available;
+      }
+
+      thead {
+        z-index: 1;
+        position: absolute;
+        left: 0;
+        width: 100px;
+        height: 100%;
+        border: 0;
+        border-right: 1px solid @table-border-color;
+
+        th {
+          display: block;
+          padding: 10px 5px!important !important;
+          font-family: 'AvenirNextLTPro-Regular';
+          letter-spacing: 0.5px;
+          text-align: center;
+          text-align: left;
+          text-transform: capitalize;
+          font-weight: 500;
+          font-size: 0.8em;
+
+          * {
+            font-size: 1em;
+          }
+          /*&::before {
+          content: "\00a0";
+        }*/
+        }
+
+        tr {
+          display: block;
+          border-spacing: 0;
+          padding: 0;
+          height: 100%;
+        }
+      }
+
+      tbody {
+        margin-left: 120px;
+        width: auto;
+        position: relative;
+        overflow-x: auto;
+        white-space: nowrap;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+
+        & > tr > th {
+          border-bottom: 1px solid #e0e0e0;
+          border-radius: 0;
+          border-spacing: 0;
+          border-collapse: collapse;
+        }
+
+        tr {
+          /*display: inline-block;*/
+          vertical-align: top;
+          display: flex;
+          flex-direction: column;
+          overflow-wrap: normal;
+          line-break: strict;
+          white-space: inherit;
+          padding: 0 15px;
+          border-bottom: none;
+        }
+
+        &:last-child::after {
+          content: " ";
+          display: table-row;
+          max-width: 300px;
+          min-width: 300px;
+          margin-left: -300px;
+        }
+      }
+
+      td {
+        display: block;
+        min-height: 1.25em;
+        margin: 0 10px!important !important;
+        padding: 10px 0 !important;
+        border-spacing: 0;
+        border-collapse: collapse;
+        overflow-wrap: normal;
+        line-break: normal;
+        white-space: normal;
+        width: -webkit-fill-available;
+        width: -moz-available;
+        max-width: 200px;
+      }
     }
   }
-}
 
-.dataframe thead th {
-  text-align: center !important;
-  font-family: 'AvenirNextLTPro-Regular' !important;
-}
+  .dataframe thead th {
+    text-align: center !important;
+    font-family: 'AvenirNextLTPro-Regular' !important;
+  }
 
-.dataframe tbody tr th:only-of-type {
-  vertical-align: middle;
-  text-align: center;
-}
+  .dataframe tbody tr th:only-of-type {
+    vertical-align: middle;
+    text-align: center;
+  }
 
-.tableContainer {
-  box-shadow: 0 0 5px #d1d4e8;
-  margin: 20px auto 40px;
-  position: relative;
-  overflow: hidden;
-  @media (max-width: 600px) {
-    margin-left: calc(~"-50vw + 50%");
-    margin-right: calc(~"-50vw + 50%");
-    width: auto!important;
+  .tableContainer {
+    box-shadow: 0 0 5px #d1d4e8;
+    margin: 20px auto 40px;
+    position: relative;
+    overflow: hidden;
+    @media (max-width: 600px) {
+      margin-left: calc(~"-50vw + 50%");
+      margin-right: calc(~"-50vw + 50%");
+      width: auto!important;
 
-    &:hover {
-      cursor: grab;
+      &:hover {
+        cursor: grab;
+      }
     }
   }
-}
 
-.handscroller {
-  &:hover {
-    cursor: grab !important;
-  }
-
-  * {
+  .handscroller {
     &:hover {
       cursor: grab !important;
     }
-  }
-}
 
-.tablefade {
-  position: absolute;
-  right: 0;
-  height: 100%;
-  width: 70px;
-  top: 0;
-  display: block;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, .8));
+    * {
+      &:hover {
+        cursor: grab !important;
+      }
+    }
+  }
+
+  .tablefade {
+    position: absolute;
+    right: 0;
+    height: 100%;
+    width: 70px;
+    top: 0;
+    display: block;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, .8));
+  }
 }
