resources page, navbar colors

--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -71,7 +71,7 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Medium', serif;
+	font-family: 'ProductSans-Medium', 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
