--- a/src/less/global/menu.less
+++ b/src/less/global/menu.less
@@ -52,7 +52,7 @@ header {
 
 
 .navigation {
-  background: #26313c;
+  background: #fff;
   height: 45px;
   text-align: center;
   position: relative;
@@ -92,8 +92,7 @@ header {
       font-family: 'ProductSans-Regular';
       font-size: .9em;
       text-transform: uppercase;
-      transform: scale(1);
-      color: #fff;
+      color: #515b65;
       font-weight: 500;
       transition: all .15s ease-out;
       position: absolute;
