--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -82,6 +82,12 @@
     color: #6e89b5 !important;
     background: rgba(199, 210, 240, 0.19);
     border-radius: 2px;
+		transition: all .2s ease-out;
+
+		&:hover {
+			color: white !important;
+			cursor: pointer;
+		}
 	}
 
 	.page-number {
