--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -53,10 +53,11 @@
         color: #597d87;
         font-family: 'AvenirNextLTPro-Medium' !important;
         margin-right: 8px;
+        font-size: 13px;
 
         @media(max-width: 600px) {
           min-width: 60px;
-          margin-right: 10px;
+          margin-right: 2px;
           font-weight: normal;
           font-size: .9em;
         }
