--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -1,7 +1,8 @@
 @table-border-color: rgba(0,0,0,.12);
 @table-striped-color: rgba(242, 242, 242, 0.5);
 
-.post-template {
+.post-template,
+.page-resources {
   table,
   td,
   th {
