--- a/src/less/pages.less
+++ b/src/less/pages.less
@@ -11,3 +11,6 @@
 @import 'pages/series.less';
 @import 'pages/githubcard.less';
 @import 'pages/cover.less';
+
+/* Table Styles for Resources Page */
+@import 'posts/table.less';
