--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -1,19 +1,5 @@
 .hljs.javascript,
 .hljs.language-javascript {
-  font-size: 14px;
-  line-height: 1.6;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
   background: linear-gradient(#203f50, #0b3c66) !important;
   color: #5fc793;
 
@@ -112,5 +98,6 @@
 
   &::before {
     content: "Javascript";
+    color: white;
   }
 }
