migrating API to digitalocean database

--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -114,10 +114,10 @@
   function AuthorDetails() {
     $.ajax({
       method: "GET",
-      url: "https://apisentris.com/api/v1/users",
+      url: "https://apisentris.com/api/v1/authors",
       headers: {
-        client_id: "115000",
-        access_token: "qWLp79NWuDtVxom5v6_h_g"
+        client_id: "140000",
+        access_token: "6OMcDqLWFV7DuVnxAxJSmQ"
       },
       contentType: 'application/json'
     }).done(function(results) {
