migrated projects to DO

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -7,7 +7,7 @@
 
   {{#if feature_image}}
         <a href="{{url}}" class="featured-media">
-          <div class="post-card-image" style="background-image: url({{img_url feature_image}})" data-rjs="2"></div>
+          <img class="featured-image" src="{{img_url feature_image}}" data-rjs="2">
         </a>
   {{/if}}
 
