--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -189,7 +189,7 @@
       position: relative;
       margin-bottom: 7px;
       height: auto;
-      /*max-width: 24.5%;*/
+      max-width: 97%;
       border-radius: 5px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
