blockquote code snippets

--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -34,6 +34,7 @@
 		width: 80%;
 		margin: 0 auto;
 		text-align: 14px;
+		line-height: 1.5;
 		@media(max-width: 600px) {
 			width: 93%;
 			margin: 0 auto;
