--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -19,6 +19,7 @@
 
         @media(max-width: 600px) {
           height: auto;
+          margin: 5px 15px 15px;
         }
       }
 
@@ -93,7 +94,6 @@
         display: block;
         margin: 0 auto;
         background-size: cover;
-        height: 200px;
         width: 100%;
       }
 
