blockquote code snippets

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -607,10 +607,15 @@
 			color: #305a68;
 
 			&::before{
-				background: rgba(86, 88, 100, 0.6);
-				mix-blend-mode: color-burn;
-				border-bottom: 1px solid #4b4f54;
+				background: rgb(148, 184, 207);
+		    mix-blend-mode: none;
+		    border-bottom: 1px solid #7ea0b5;
+		    color: white;
 				color: white;
+			}
+
+			.hljs-string {
+				 color: #52aa7e;
 			}
 		}
 
