blockquote code snippets

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -608,7 +608,7 @@
 
 			&::before{
 				background: rgb(148, 184, 207);
-		    mix-blend-mode: none;
+		    mix-blend-mode: unset;
 		    border-bottom: 1px solid #7ea0b5;
 		    color: white;
 				color: white;
