--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -12,7 +12,7 @@
 
       .content {
         position: relative;
-        margin: 15px;
+        margin: 5px 15px 15px;
         padding: 0;
         height: auto;
         display: block;
