--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -142,8 +142,8 @@
 
 	.excerpt {
 		font-weight: 400;
-		font-size: 1.3em;
-		margin: 0 60px 25px;
+		font-size: 1.25em;
+		margin: 0 60px;
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: 'AvenirNextLTPro-Medium';
