author page in stable condition

--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -1,8 +1,5 @@
 {{#author}}
 <div class="sidebar" class="{{author.slug}}">
-	{{#if website}}
-		{{> widget-authorwebsite}}
-	{{/if}}
 	{{> widget-github}}
 	{{> widget-medium}}
 	{{> widget-meetup}}
@@ -10,7 +7,7 @@
 	{{#has slug="todd"}}
 	<div class="widget author-twitter">
 		<h4 class="title">Twitter</h4>
-		<iframe src="https://feed.mikle.com/widget/v2/78832/" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+		<iframe src="https://feed.mikle.com/widget/v2/103096/" height="740px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
 	</div>
 	{{else}}
 		{{> widget-authortwitter}}
