--- a/default.hbs
+++ b/default.hbs
@@ -9,6 +9,8 @@
 	<meta name="HandheldFriendly" content="True" />
  	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<meta name="theme-color" content="#0db0e2"/>
+	<link rel="shortcut icon" href="{{asset "/images/favicon.png"}}" />
+
 	{{! Styles }}
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
 	{{! Scripts }}
