fixed resources page

--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -47,7 +47,7 @@
 
 
     function python() {
-      var url = 'https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description,issuetype,updated&order_by=updated';
+      var url = 'https://apisentris.com/api/v1/resources?select=issuetype_icon,summary,description,issuetype,updated&order_by=updated';
       var headers = {
         "Content-Type": "application/json",
         "client_id": "140000",
