adding additional language support

--- a/default.hbs
+++ b/default.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{lang}}">
+<html lang="{{@site.lang}}">
 <head>
 	{{! Document Settings }}
 	<meta charset="utf-8" />
@@ -19,7 +19,7 @@
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
-	  <meta property="og:image" content="{{@blog.cover_image}}"/>
+	  <meta property="og:image" content="{{@site.cover_image}}"/>
 	{{/is}}
 	{{> analytics}}
 	{{! Ghost outputs important style and meta data with this tag }}
