--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -8,9 +8,9 @@
   {{/if}}
   <div class="author-specs">
     {{#if profile_image}}
-      <a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avatar"></a>
+      <a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="{{name}}'s' avatar" class="avatar"></a>
     {{else}}
-      <a href="{{url}}" class="avatar-link"><img src="{{asset "default-user-image.jpg"}}" alt="{{name}} avatar" class="avatar"></a>
+      <a href="{{url}}" class="avatar-link"><img src="{{asset "default-user-image.jpg"}}" alt="{{name}}'s' avatar" class="avatar"></a>
     {{/if}}
     <div class="details">
       <div class="author">
