--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -1,9 +1,7 @@
 {{#author}}
 	<div class="cover author-cover">
 			{{#if profile_image}}
-				<img src="{{profile_image}}" alt="{{name}} avatar" class="avatar">
-			{{else}}
-				<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "images/default-user-image.jpg"}}" alt="{{name}}'s avatar" class="avatar">
+				<img src="{{profile_image}}" alt="{{name}}'s' avatar" class="avatar">
 			{{/if}}
 		<h3 class="author-name">
 			{{name}}
