--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -12,7 +12,7 @@
     <script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
     <script src="{{asset "dist/author.js"}}"></script>
 {{/is}}
-{{#is "page"}}
+{{#is "page,home"}}
     <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
 {{/is}}
 <!-- End Scripts -->
