--- a/partials/share_links.hbs
+++ b/partials/share_links.hbs
@@ -9,7 +9,7 @@
 	</li>
 	<!-- linkedin -->
 	<li class="btn linkedin">
-		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@blog.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
+		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@site.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
 	</li>
 	<!-- Y Combinator -->
 	<li class="btn ycombinator">
