--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -8,7 +8,7 @@
 		<a class="btn tumblr" name="tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
 		<a class="btn google" name="google" href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google"></i></a>
 		<a class="btn github" name="github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
-		<a class="btn rss" name="rss" href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a>
+		<a class="btn rss" name="rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
 	</div>
 </div>
 <!-- end widget -->
