--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -6,9 +6,9 @@
   {{/if}}
 
   {{#if feature_image}}
-        <a href="{{url}}" class="featured-media">
-          <img class="featured-image" src="{{img_url feature_image}}" data-rjs="2">
-        </a>
+    <a href="{{url}}" alt="{{{title}}}" class="featured-media">
+      <img class="featured-image" src="{{img_url feature_image}}" alt="{{{title}}}" data-rjs="2" size="postpreview">
+    </a>
   {{/if}}
 
   <div class="content">
@@ -29,14 +29,14 @@
         {{/primary_tag}}
         {{#primary_author}}
         {{primary_author.bio}}
-          {{!--{{#unless profile_image}}--}}
+        {{#unless profile_image}}
             <a href="{{url}}" class="meta-item author"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
             <a href="{{url}}" class="meta-item author-mobile"><!--<i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i>--><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
-        {{!--  {{/unless}}
+        {{/unless}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="3"><span>{{name}}</span></a>
-            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="3"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
-          {{/if}}--}}
+            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="2" size="xs"><span>{{name}}</span></a>
+            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="2" size="xs"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
+          {{/if}}
         {{/primary_author}}
         <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
       </div>
