--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -3,7 +3,7 @@
 
     {{#if feature_image}}
     <a class="imagewrapper" href="{{url}}">
-      <img class="post-card-image" src="{{img_url feature_image}}">
+      <img class="post-card-image" src="{{img_url feature_image}}" alt="{{{title}}}">
       </a>
     {{/if}}
 
