--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -1,8 +1,8 @@
 <!-- start text widget -->
 <div class="widget text">
-	<h1>{{@blog.title}}</h1>
+	<h1>{{@site.title}}</h1>
 		<div>
-			<p>{{@blog.description}}</p>
+			<p>{{@site.description}}</p>
 		</div>
 </div>
 <!-- end text widget -->
