--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@
 				<div class=" main-content">
 					<!-- start post -->
 
-					<article class="{{post_class}} post-page">
+					<article class="{{post_class}}">
 						<h1 class="post-title">{{{title}}}</h1>
 						<h4 class="excerpt">{{excerpt}}</h4>
 						{{#if feature_image}}
@@ -37,8 +37,8 @@
 										<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
 									{{/unless}}
 									{{#if profile_image}}
-										<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi" data-rjs="3"><span>{{name}}</span></a>
-										<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi" data-rjs="3"><span>{{slug}}</span></a>
+										<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="xs"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="3"><span>{{name}}</span></a>
+										<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="xs"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="3"><span>{{slug}}</span></a>
 									{{/if}}
 								{{/primary_author}}
 								<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
