--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -2,8 +2,8 @@
 <div class="widget contributors">
 	<h4 class="footer-title">Contributors</h4>
 	<ul>
-		{{#get "users" include="count.posts"}}
-			{{#foreach users}}
+		{{#get "authors" include="count.posts"}}
+			{{#foreach authors}}
 					<li>
 						<a href="{{url}}" class="single-author-name">{{name}}</a>
 					</li>
