--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -34,7 +34,7 @@
     margin-bottom: 10px;
     top: 0;
     left: 0;
-    font-family: 'Hack';
+    font-family: 'ProductSans-Regular';
     font-size: 1.15em;
     font-style: normal;
     font-variant: normal;
