--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,18 +1,14 @@
 #seriesposts {
-  margin-bottom: 30px;
-  padding: 15px 20px 1px;
-  background: #E9F2F5;
+  margin-bottom: 50px;
   border-radius: 3px;
-  @media(max-width: 600px) {
-    padding: 15px 20px 10px;
-  }
+  padding: 0;
 
   h5 {
-    border-bottom: 1px solid #adcacf !important;
+    border-bottom: 1px solid #dbe3e5 !important;
     padding-bottom: 10px;
     font-size: 1.3em;
     color: #597d87 !important;
-    font-family: 'AvenirNextLTPro-Medium',serif;
+    font-family: 'AvenirNextLTPro-Regular', serif;
 
     @media(max-width: 600px) {
       margin-top: 5px;
