--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -21,12 +21,16 @@
 
     function posts_in_series(series, seriesname) {
       var series_endpoint = 'https://hackersandslackers.com/ghost/api/v2/content/posts/?key=bc6a59fe37ee67d9fbb93ea03b&filter=tag:' + series + '&order_by=created_at.asc'
-      $.ajax({
-        method: "GET",
-        url: series_endpoint,
-        contentType: 'application/json'
-      }).done(function(results) {
-        var posts = results['posts'];
+      var headers = {
+        "Content-Type": "application/json"
+      }
+      fetch(series_endpoint, {
+        method: 'GET',
+        headers: headers
+      }).then((res) => {
+        return res.json()
+      }).then((json) => {
+        var posts = json['posts'];
         var i;
         for (i = 0; i < posts.length; i++) {
           var post = posts[i];
